Bug 689806 - Regression: differences in vtm2k.pdf
Summary: Regression: differences in vtm2k.pdf
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Regression (show other bugs)
Version: master
Hardware: PC Linux
: P1 normal
Assignee: Michael Vrhel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-28 08:06 UTC by Marcos H. Woehrmann
Modified: 2008-12-19 08:31 UTC (History)
0 users

See Also:
Customer:
Word Size: ---


Attachments
vtm2k.pdf (8.61 KB, application/pdf)
2008-04-28 08:07 UTC, Marcos H. Woehrmann
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marcos H. Woehrmann 2008-04-28 08:06:26 UTC
The standard regression file vtm2k.pdf (attached) renders to a complete black
image when ripped with Ghostscript r8664 or later; previous revision produce a
half white/half light yellow image, the same as Acrobat Reader.

The command line I'm using:

  bin/gs -sDEVICE=ppmraw -o test.ppm ./vtm2k.pdf
Comment 1 Marcos H. Woehrmann 2008-04-28 08:07:43 UTC
Created attachment 3967 [details]
vtm2k.pdf
Comment 2 Michael Vrhel 2008-04-28 23:55:38 UTC
It should be back to how it was prior to r8664.  A new bug was issued related to
this output compared to AR (dark versus light yellow). bug 689808